<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_of_layouts"
    tools:context=".BottomActivities.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_avatar_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/avatar_profile"
        app:civ_border_color="@color/gray"
        app:civ_border_width="1dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/edit_profile_button"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="152dp"
        android:layout_height="29dp"
        android:layout_marginLeft="20dp"
        android:text="@string/def_profile_username"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_profile_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_bg"
        android:minHeight="0dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/edit_profile"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/profile_avatar_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toEndOf="@id/profile_avatar_img" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/warning_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:gravity="center_horizontal"
            android:text="@string/warning_text"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/completed_tasks_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="200dp"
            android:text="@string/completed_tasks"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/completed_to_do_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/completed_todo"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/completed_purchases_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <include layout="@layout/bottom_nav_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>