<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".AddEditActivities.AddEditNoteActivity">

    <com.google.android.gms.ads.doubleclick.PublisherAdView
        android:id="@+id/publisherAdViewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="/6499/example/banner" />


    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/title"
        android:inputType="text"
        android:textColorHint="@android:color/black" />

    <TextView
        android:id="@+id/text_view_desc_view_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:visibility="gone" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textColorHint="@android:color/black" />

    <TextView
        android:id="@+id/text_view_view_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/spinnerPriority"
        android:layout_width="257dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:entries="@array/importance" />

    <TextView
        android:id="@+id/text_view_date_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="Задача запланирована на: "
        android:visibility="gone" />


    <TextView
        android:id="@+id/hint_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/mark_task_on_calendar" />

    <CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="wrap_content"
        android:layout_height="309dp"
        android:layout_gravity="center"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="notifyDate"
        android:text="Установить напоминание"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

</LinearLayout>